feat: ch13: add step for final project
