# go-middleware/cmd/docs/swagger.yaml
@@ -2,25 +2,28 @@ basePath: /
 definitions:
   model.User:
     properties:
-      createdAt:
-        type: string
-      deleted_at:
+      created_at:
         type: string
       dob:
         type: string
-      first_name:
+      email:
+        description: |-
+          FirstName string    `json:"first_name"`
+          LastName  string    `json:"last_name"`
         type: string
       id:
         type: integer
-      last_name:
-        type: string
-      updatedAt:
+      updated_at:
         type: string
       username:
         type: string
     type: object
   pkg.ErrorResponse:
     properties:
+      errors:
+        items:
+          type: string
+        type: array
       message:
         type: string
     type: object
@@ -68,6 +71,43 @@ paths:
       tags:
       - users
   /users/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: will delete user with given id from param
+      parameters:
+      - description: bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/pkg.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/pkg.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/pkg.ErrorResponse'
+      summary: Delete user by selected id
+      tags:
+      - users
     get:
       consumes:
       - application/json
