# go-middleware/internal/model/user.go
@@ -3,18 +3,27 @@ package model
 import (
 	"errors"
 	"time"
+
+	"gorm.io/gorm"
 )
 
 type User struct {
-	ID        uint64    `json:"id"`
-	Username  string    `json:"username"`
-	FirstName string    `json:"first_name"`
-	LastName  string    `json:"last_name"`
-	Password  string    `json:"password"`
-	DoB       time.Time `json:"dob" gorm:"column:dob"`
-	CreatedAt time.Time `json:"created_at"`
-	UpdatedAt time.Time `json:"updated_at"`
-	DeletedAt time.Time `json:"deleted_at,omitempty"`
+	ID       uint64 `json:"id"`
+	Username string `json:"username"`
+	// FirstName string    `json:"first_name"`
+	// LastName  string    `json:"last_name"`
+	Email     string         `json:"email"`
+	Password  string         `json:"-"`
+	DoB       time.Time      `json:"dob" gorm:"column:dob"`
+	CreatedAt time.Time      `json:"created_at"`
+	UpdatedAt time.Time      `json:"updated_at"`
+	DeletedAt gorm.DeletedAt `json:"-" gorm:"column:deleted_at"`
+}
+
+type DefaultColumn struct {
+	CreatedAt time.Time      `json:"created_at"`
+	UpdatedAt time.Time      `json:"updated_at"`
+	DeletedAt gorm.DeletedAt `json:"deleted_at" gorm:"column:deleted_at"`
 }
 
 type UserMediaSocial struct {
@@ -30,10 +39,12 @@ type UserMediaSocial struct {
 // https://blog.logrocket.com/gin-binding-in-go-a-tutorial-with-examples/
 // https://gin-gonic.com/docs/examples/binding-and-validation/
 type UserSignUp struct {
-	Username  string `json:"username" binding:"required"`
-	FirstName string `json:"first_name"`
-	LastName  string `json:"last_name"`
-	Password  string `json:"password" binding:"required"`
+	Username string `json:"username" binding:"required"`
+	// FirstName string `json:"first_name"`
+	// LastName  string `json:"last_name"`
+	Password string    `json:"password" binding:"required"`
+	Email    string    `json:"email"`
+	DoB      time.Time `json:"dob"`
 }
 
 func (u UserSignUp) Validate() error {
